force-app/main/default/objects/Accounts_Receivable__c/Accounts_Receivable__c.object-meta.xml
<CustomObject>
    <description>Open AR</description>
    <label>Accounts Receivable</label>
    <nameField>
        <label>Accounts Receivable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Receivable</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>