force-app/main/default/objects/Accounts_Receivable__c/fields/AR_181_365__c.field-meta.xml
<CustomField>
    <fullName>AR_181_365__c</fullName>
    <label>A/R 181-365 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>