force-app/main/default/objects/Accounts_Receivable__c/fields/AR_1_30__c.field-meta.xml
<CustomField>
    <fullName>AR_1_30__c</fullName>
    <label>A/R 1-30 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>