force-app/main/default/objects/Accounts_Receivable__c/fields/AR_31_60__c.field-meta.xml
<CustomField>
    <fullName>AR_31_60__c</fullName>
    <label>A/R 31-60 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>