force-app/main/default/objects/Accounts_Receivable__c/fields/AR_Current__c.field-meta.xml
<CustomField>
    <fullName>AR_Current__c</fullName>
    <description>A/R Current</description>
    <inlineHelpText>This is total open AR that is not yet past due. All other below values are past due by the number of days indicated by the field label.</inlineHelpText>
    <label>A/R Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>