force-app/main/default/objects/Accounts_Receivable__c/fields/AR_OA__c.field-meta.xml
<CustomField>
    <fullName>AR_OA__c</fullName>
    <description>A/R OA</description>
    <label>A/R OA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>