force-app/main/default/objects/Accounts_Receivable__c/fields/AR_OC__c.field-meta.xml
<CustomField>
    <fullName>AR_OC__c</fullName>
    <description>A/R OC</description>
    <label>A/R OC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>