force-app/main/default/objects/Accounts_Receivable__c/fields/AR_Total__c.field-meta.xml
<CustomField>
    <fullName>AR_Total__c</fullName>
    <label>A/R Total Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>