force-app/main/default/objects/Accounts_Receivable__c/fields/Win_Id__c.field-meta.xml
<CustomField>
    <fullName>Win_Id__c</fullName>
    <description>Win Id</description>
    <externalId>true</externalId>
    <label>Win Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>